--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-three-next",
-  "version": "2.0.0",
+  "name": "my-banking",
+  "version": "1.0.0",
   "authors": [
-    "Renaud ROHLINGER <https://twitter.com/onirenaud>"
+    "Eugene VAN ZYL <https://twitter.com/ADevNamedGeenas>"
   ],
   "license": "MIT",
   "private": true,
@@ -47,5 +47,8 @@
     "three-stdlib": "^2.9.1",
     "url-loader": "^4.1.1",
     "zustand": "^4.0.0-rc.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^1.35.1"
   }
 }
