--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   ],
   "license": "MIT",
   "private": true,
-  "engines": {
-    "node": ">=14"
-  },
   "scripts": {
     "lint": "yarn prettier && yarn eslint",
     "eslint": "next lint --fix --dir src",
@@ -20,12 +17,10 @@
     "start": "next start"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.17.0",
     "@next/bundle-analyzer": "^12.1.5",
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
     "autoprefixer": "^10.4.4",
-    "babel-plugin-glsl": "^1.0.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
@@ -37,16 +32,12 @@
     "next": "^12.1.5",
     "next-compose-plugins": "^2.2.1",
     "next-offline": "^5.0.5",
-    "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "raw-loader": "^4.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24",
     "three": "^0.139.2",
-    "three-stdlib": "^2.9.1",
-    "url-loader": "^4.1.1",
-    "zustand": "^4.0.0-rc.0"
+    "three-stdlib": "^2.9.1"
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.1"
